--- a/templates/usuarios/logs.html
+++ b/templates/usuarios/logs.html
@@ -6,7 +6,7 @@
 <div class="row">
     <div class="col-12">
         <h2 class="mb-4">
-            <i class="bi bi-clock-history"></i> Histórico de Alterações (INSERT, UPDATE, DELETE)
+            <i class="bi bi-clock-history"></i> Histórico de Alterações
         </h2>
         
         {% if usuario %}
