--- a/templates/gestores/cadastrar.html
+++ b/templates/gestores/cadastrar.html
@@ -33,7 +33,7 @@
             </div>
           </div>
           <div class="d-flex justify-content-between mt-4">
-            <a href="{{ url_for('escolas.listar_gestores', escola_id=escola.id) }}" class="btn btn-secondary">
+            <a href="{{ url_for('gestores.listar', escola_id=escola.id) }}" class="btn btn-secondary">
               <i class="bi bi-arrow-left"></i> Voltar
             </a>
             <button type="submit" class="btn btn-success">
